latest notebooks for paper

--- a/notebooks/STG_Circuit/analyze_STG.ipynb
+++ b/notebooks/STG_Circuit/analyze_STG.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +308,7 @@
       "WARNING:tensorflow:Using a while_loop for converting ScatterNd\n",
       "WARNING:tensorflow:Using a while_loop for converting ScatterNd\n",
       "WARNING:tensorflow:Using a while_loop for converting ScatterNd\n",
-      "took 6.401294946670532 seconds\n"
+      "took 6.020439863204956 seconds\n"
      ]
     },
     {
@@ -364,6 +364,23 @@
     "log_q_zs_c = np.concatenate((log_q_z, log_q_z_stars[[0, 2]]), axis=0)\n",
     "cs = sc.to_rgba(log_q_zs_c)\n",
     "c_star = np.array([cs[-2], cs[np.argmin(log_q_zs_c)], cs[-1]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-10.657438  -3.221994]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(d)"
    ]
   },
   {
