--- a/written/eLifeRevision/eLife2020.bib
+++ b/written/eLifeRevision/eLife2020.bib
@@ -1,12 +1,34 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Sean Bittner at 2021-02-16 14:38:58 -0500 
+%% Created for Sean Bittner at 2021-03-22 19:52:43 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{hennequin2014optimal,
+	author = {Hennequin, Guillaume and Vogels, Tim P and Gerstner, Wulfram},
+	date-added = {2021-03-22 19:52:33 -0400},
+	date-modified = {2021-03-22 19:52:33 -0400},
+	journal = {Neuron},
+	number = {6},
+	pages = {1394--1406},
+	publisher = {Elsevier},
+	title = {Optimal control of transient dynamics in balanced networks supports generation of complex movements},
+	volume = {82},
+	year = {2014}}
+
+@article{bondanelli2019population,
+	author = {Bondanelli, Giulio and Deneux, Thomas and Bathellier, Brice and Ostojic, Srdjan},
+	date-added = {2021-03-22 19:06:26 -0400},
+	date-modified = {2021-03-22 19:06:26 -0400},
+	journal = {BioRxiv},
+	pages = {810655},
+	publisher = {Cold Spring Harbor Laboratory},
+	title = {Population coding and network dynamics during OFF responses in auditory cortex},
+	year = {2019}}
 
 @book{sisson2018handbook,
 	author = {Sisson, Scott A and Fan, Yanan and Beaumont, Mark},
