--- a/written/eLifeRevision/Bittner_eLife2020.tex
+++ b/written/eLifeRevision/Bittner_eLife2020.tex
@@ -1642,8 +1642,8 @@ In this analysis, we infer connectivity parameterizations $\mathbf{z} = \left[\m
 For this RNN model to be stable, all real eigenvalues of $W$ must be less than 1:  $\text{real}(\lambda_1) < 1$, where $\lambda_1$ denotes the greatest real eigenvalue of $W$.
 For a stable RNN to amplify at least one input pattern, the symmetric connectivity $W^s = \frac{W + W\top}{2}$ must have an eigenvalue greater than 1:
 $\lambda^s_1 > 1$, where  $\lambda^s$ is the maximum eigenvalue of $W^s$.
-These two conditions are necessary and sufficient for stable amplification in RNNs\cite{bondanelli2020coding}.
-We define the emergent property of stable amplification with means of these eigenvalues (0.5 and 1.5, respectively) that satisfy these conditions and variances ($0.25^2$) about those means that rarely violate the eigenvalue constraints.
+These two conditions are necessary and sufficient for stable amplification in RNNs \cite{bondanelli2020coding}.
+We define the emergent property of stable amplification with means of these eigenvalues (0.5 and 1.5, respectively) that satisfy these conditions and variances ($0.25^2$) about those means such that samples rarely violate the eigenvalue constraints.
 As a maximum entropy distribution, this is written as
 \begin{equation} 
 T(\mathbf{x}; \mathbf{z}) = \begin{bmatrix} \text{real}(\lambda_1)(\mathbf{x}; \mathbf{z}) \\ \lambda_1^s(\mathbf{x}; \mathbf{z}) \\ \left(\text{real}(\lambda_1)(\mathbf{x}; \mathbf{z}) - 0.5 \right)^2 \\ \left( \lambda_1^s(\mathbf{x}; \mathbf{z})  - 1.5 \right)^2 \end{bmatrix},
@@ -1651,9 +1651,15 @@ T(\mathbf{x}; \mathbf{z}) = \begin{bmatrix} \text{real}(\lambda_1)(\mathbf{x}; \
 \begin{equation} 
 \bm{\mu}_{\text{opt}} = \begin{bmatrix} 0.5 \\ 1.5 \\ 0.25^2 \\ 0.25^2 \end{bmatrix}.
 \end{equation}
+Gradients of maximum eigenvalues of hermitian matrices like $W^s$ are available with modern automatic differentiation tools.
+To differentiate through the $\text{real}(\lambda_1)$, we solve the following equation for eigenvalues of rank-2 matrices using the rank reduced matrix $W^r = V^{\top} U$
+\begin{equation}
+\lambda_{\pm} = \frac{\text{Tr}(W^r) \pm \sqrt{\text{Tr}(W^r)^2 - 4\text{Det}(W^r)}}{2}.
+\end{equation}
+
 For EPI in Fig. \ref{fig:LRRNN}, we used a real NVP architecture with three coupling layers of affine transformations parameterized by two-layer neural networks of 100 units per layer.
 The initial distribution was a standard isotropic gaussian $z_0 \sim \mathcal{N}(\mathbf{0}, I)$ mapped to the support of $\mathbf{z}_i \in [-1, 1]$. 
-We used an augmented Lagrangian coefficient of $c_0 = 10^{3}$, a batch size $n=200$, $\beta=4$, and chose to use $500$ iterations per augmented LaGrangian epoch.
+We used an augmented Lagrangian coefficient of $c_0 = 10^{3}$, a batch size $n=200$, $\beta=4$, and chose to use $500$ iterations per augmented Lagrangian epoch.
 
 
 ABC methods define a tolerance $\epsilon$ from observed data $x_0$ for which we keep sampled parameters.
