--- a/written/eLifeRevision/eLife2020.bib
+++ b/written/eLifeRevision/eLife2020.bib
@@ -1,12 +1,24 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Sean Bittner at 2021-03-22 19:52:43 -0400 
+%% Created for Sean Bittner at 2021-03-23 14:04:40 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{klinger2018pyabc,
+	author = {Klinger, Emmanuel and Rickert, Dennis and Hasenauer, Jan},
+	date-added = {2021-03-23 14:04:37 -0400},
+	date-modified = {2021-03-23 14:04:37 -0400},
+	journal = {Bioinformatics},
+	number = {20},
+	pages = {3591--3593},
+	publisher = {Oxford University Press},
+	title = {pyABC: distributed, likelihood-free inference},
+	volume = {34},
+	year = {2018}}
 
 @article{hennequin2014optimal,
 	author = {Hennequin, Guillaume and Vogels, Tim P and Gerstner, Wulfram},
