--- a/written/eLifeRevision/eLife2020.bib
+++ b/written/eLifeRevision/eLife2020.bib
@@ -1,12 +1,35 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Sean Bittner at 2021-03-23 14:04:40 -0400 
+%% Created for Sean Bittner at 2021-03-26 14:08:00 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{felleman1991distributed,
+	author = {Felleman, Daniel J and Van Essen, David C},
+	date-added = {2021-03-26 14:07:58 -0400},
+	date-modified = {2021-03-26 14:07:58 -0400},
+	journal = {Cerebral cortex (New York, NY: 1991)},
+	number = {1},
+	pages = {1--47},
+	title = {Distributed hierarchical processing in the primate cerebral cortex.},
+	volume = {1},
+	year = {1991}}
+
+@article{semedo2019cortical,
+	author = {Semedo, Jo{\~a}o D and Zandvakili, Amin and Machens, Christian K and Byron, M Yu and Kohn, Adam},
+	date-added = {2021-03-26 13:52:53 -0400},
+	date-modified = {2021-03-26 13:52:53 -0400},
+	journal = {Neuron},
+	number = {1},
+	pages = {249--259},
+	publisher = {Elsevier},
+	title = {Cortical areas interact through a communication subspace},
+	volume = {102},
+	year = {2019}}
 
 @article{klinger2018pyabc,
 	author = {Klinger, Emmanuel and Rickert, Dennis and Hasenauer, Jan},
