section title change'

--- a/written/eLifeRevision/Bittner_eLife2020.tex
+++ b/written/eLifeRevision/Bittner_eLife2020.tex
@@ -414,7 +414,7 @@ While scaling to high dimensions is important, we show in the next two sections 
 %Although, theoretical approaches (e.g. \cite{mastrogiuseppe2018linking}) can be used to reason about the wholistic activity of such high dimensional systems by introducing some degree of additional structure into the model.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{EPI reveals how neuron-type specific noise governs variability in the stochastic stabilized supralinear network} \label{results_V1}
+\subsection{EPI reveals how noisy input across neuron-types governs excitatory variability in a V1 model} \label{results_V1}
 
 \begin{figure}
 \vspace{-1cm}
